--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="txt_senha">senha</string>
     <string name="btn_entrar">ENTRAR</string>
     <string name="txt_esqueci_senha">Esqueci minha senha</string>
+    <string name="imageContentDescription">Logo do aplicativo</string>
 </resources>
