--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="txt_senha">senha</string>
     <string name="btn_entrar">ENTRAR</string>
     <string name="txt_esqueci_senha">Esqueci minha senha</string>
+    <string name="txt_loading">Carregando</string>
     <string name="imageContentDescription">Logo do aplicativo</string>
     <string name="text_task">Trilho</string>
     <string name="scrum">Scrum</string>
